--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">LXG</string>
     <string name="title_activity_main">LXG</string>
-    <string name="package_name">com.legalxgen.app</string>
-    <string name="custom_url_scheme">com.legalxgen.app</string>
+    <string name="package_name">app.lgxapp.com</string>
+    <string name="custom_url_scheme">app.lgxapp.com</string>
 </resources>
